<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/header"></include>
    <TextView
        android:layout_width="wrap_content"
        android:layout_weight="0.1"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "0dp"
        android:layout_weight="0.2"
        android:text="@string/login"
        android:textSize="85dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/errorLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="25sp"
        android:textColor="@color/red"

        android:textStyle="italic"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_weight="0.05"
        android:layout_height="wrap_content"
        android:text="@string/identifiant"
        android:textSize="55sp"
        android:gravity="center_horizontal" />
   <EditText
       android:id="@+id/identifiant"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:inputType="text"
       android:textSize="55sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="55sp"
        android:gravity="center_horizontal"
        android:layout_weight="0.04" />
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:textSize="55sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"/>

    <Button
        android:id="@+id/valideLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/valider"
       android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>


</LinearLayout>